# nba-rules-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/demo_frames/: vlm_output_embedding.npy  vlm_output_text.json
notebooks/: nba_rules_rag_colab.ipynb
scripts/: run_nba_query.py
src/nba_rules_rag/: chunking.py  embeddings.py  frame_extraction.py  pipeline.py  query_builder.py  retriever.py  rulebook_loader.py  vlm_describer.py  youtube_utils.py
src/nba_rules_rag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_chunking.py  test_frame_extraction.py  test_query_builder.py  test_run_nba_query.py  test_vlm_describer.py  test_youtube_utils.py
